# inscriptis

./: .bandit  .coveragerc  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .safety-project.ini  .travis.yml  AUTHORS  CONTRIBUTING.md  COPYING  Dockerfile  LICENSE  MIGRATION-to-2.0.md  README.md  README.rst  RENDERING.md  TODO.txt  docker-compose.yml  index.yaml  publish.sh  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  create-container.yml  helm-lifecycle.yml  helm-release.yaml  python-package.yml  release-github-pages.yml
benchmarking/: a  b  run_benchmarking.py  speed_comparisons.txt  url_list.txt
docs/: Makefile  api.rst  benchmarking.rst  conf.py  index.rst  inscriptis-module-documentation.rst  installation.rst  requirements.txt
docs/paper/: Makefile  paper.bib  paper.md
docs/paper/images/: inscriptis-vs-lynx.xcf
examples/: annotation-profile.json  custom-html-handling.py  table-annotation-profile.json  wikipedia-entities-and-citations.json
examples/annotation/: annotation-profile.json  stackoverflow.json  unittest.json  wikipedia.json  xda-developers.json
helm/: chart-release-config.yaml
helm/chart/: Chart.yaml  values.yaml
paper/: paper.bib  paper.md
scripts/: inscript.py  web-service.py
src/: examples.py  inscriptis  inscriptis.py
src/comparison_script/: compare_html2cleartext.py
src/comparison_script/comparison_results/20151220_00-03-09/: output_html2text_de.wikipedia.org-wiki-Chur.txt  output_html2text_de.wikipedia.org-wiki-Python_(Programmiersprache).txt  output_html2text_de.wikipedia.org-wiki-Wikipedia-Hauptseite.txt  output_html2text_jr-central.co.jp.txt  output_html2text_www.aljazeera.net-news-humanrights-2015-12-14-D8A3D988D8A8D8A7D985D8A7-D98AD8ACD8AFD8AF-D8A7D984D8AA.txt  output_html2text_www.aljazeera.net-portal.txt  output_html2text_www.heise.de-newsticker-meldung-Fairphone-2-im-Test-Das-erste-modulare-Smartphone-3043417.html.txt  output_html2text_www.heise.de.txt  output_html2text_www.htwchur.ch.txt  output_html2text_www.nzz.ch-mobilitaet-auto-mobil-bekenntnis-zum-stromauto-ld.3630.txt  output_html2text_www.nzz.de.txt  output_html2text_www.watson.ch-Digital20&20Games-Android-134350872-Der-Monster-Akku-in-diesem-Smartphone-hC3A4lt-bis-.txt  output_html2text_www.watson.de.txt  output_justext_de.wikipedia.org-wiki-Chur.txt  output_justext_de.wikipedia.org-wiki-Python_(Programmiersprache).txt  output_justext_de.wikipedia.org-wiki-Wikipedia-Hauptseite.txt  output_justext_jr-central.co.jp.txt  output_justext_www.aljazeera.net-news-humanrights-2015-12-14-D8A3D988D8A8D8A7D985D8A7-D98AD8ACD8AFD8AF-D8A7D984D8AA.txt  output_justext_www.aljazeera.net-portal.txt  output_justext_www.heise.de-newsticker-meldung-Fairphone-2-im-Test-Das-erste-modulare-Smartphone-3043417.html.txt  output_justext_www.heise.de.txt  output_justext_www.htwchur.ch.txt  output_justext_www.nzz.ch-mobilitaet-auto-mobil-bekenntnis-zum-stromauto-ld.3630.txt  output_justext_www.nzz.de.txt  output_justext_www.watson.ch-Digital20&20Games-Android-134350872-Der-Monster-Akku-in-diesem-Smartphone-hC3A4lt-bis-.txt  output_justext_www.watson.de.txt  output_lynx_de.wikipedia.org-wiki-Chur.txt  output_lynx_de.wikipedia.org-wiki-Python_(Programmiersprache).txt  output_lynx_de.wikipedia.org-wiki-Wikipedia-Hauptseite.txt  output_lynx_jr-central.co.jp.txt  output_lynx_www.aljazeera.net-news-humanrights-2015-12-14-D8A3D988D8A8D8A7D985D8A7-D98AD8ACD8AFD8AF-D8A7D984D8AA.txt  output_lynx_www.aljazeera.net-portal.txt  output_lynx_www.heise.de-newsticker-meldung-Fairphone-2-im-Test-Das-erste-modulare-Smartphone-3043417.html.txt  output_lynx_www.heise.de.txt  output_lynx_www.htwchur.ch.txt  (+18 more)
src/inscriptis/: __init__.py  convert.py  css.py  css_profiles.py  engine.py  html_engine.py  html_properties.py  metadata.py  table_engine.py
src/inscriptis/annotation/: __init__.py  helper.py  parser.py
src/inscriptis/cli/: __init__.py  inscript.py
src/inscriptis/model/: __init__.py  attribute.py  block.py  canvas.py  config.py  css.py  html_document_state.py  html_element.py  prefix.py  table.py
src/inscriptis/service/: __init__.py  web.py
tests/: test_annotation.py  test_annotation_engine.py  test_annotation_output_processor.py  test_annotation_output_xml.py  test_annotation_rule_parsing.py  test_block.py  test_broken_table_handling.py  test_cli.py  test_custom_html_tag_handling.py  test_double_a.py  test_empty_string.py  test_engine.py  test_html_conversion_options.py  test_html_snippets.py  test_html_snippets_annotations.py  test_invalid_float_specification.py  test_limit_whitespace_affixes.py  test_line.py  test_list_div.py  test_list_value.py  test_margin_before_at_start.py  test_margin_handling.py  test_metadata.py  test_model_html_element_canvas.py  test_model_line.py  test_model_prefix.py  test_model_prefix_iterator.py  test_parse_css.py  test_strip_xml_header.py  test_style_parsing.py  test_table.py  test_table_cell.py  test_table_cell_annotation_align.py  test_table_cell_formatting.py  test_table_row.py  test_verion_information.py  test_version_information.py  test_web_service.py  test_white_space_handling.py
tests/html/: advanced-prefix-test.html  advanced-prefix-test.txt  br-in-table.html  br-in-table.txt  br-in-table2.html  br-li.html  br-li.txt  br.html  br.txt  direct-enumeration.html  direct-enumeration.txt  empty-table.html  enumeration-multiple-value.html  enumeration-multiple-value.txt  enumeration-value.html  enumeration-value.txt  enumerations.html  enumerations.txt  html-comment-ofuscation.html  html-comment-ofuscation.txt  invalid-table.html  invalid-table.txt  invalid-table2.html  invalid-table2.txt  invalid-table3.html  invalid-table3.txt  invisible.html  invisible2.html  invisible2.txt  invisible3.html  naturgruen-team.html  nested-list.html  nested-list.txt  nested-table-alignment-css.html  nested-table-alignment-css.txt  nested-table-alignment.html  nested-table-alignment.txt  nested-table.html  nested-table.txt  p-br.html  (+49 more)
tests/html/real-world/: avantec-team.html  rswag-mitarbeiter.html
(+14 files in other folders)
